<resources>
    <string name="app_name">Note App</string>
    <string name="image">image</string>
    <string name="bersyte">bersyte</string>
    <string name="no_notes_available">No notes available!!!</string>
    <string name="type_your_title">Type your title</string>
    <string name="type_something">Type something...</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="note_title">Note title</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
</resources>